Melhoria do CDU Modelos mais vendidos -Adição das classes web.ErrorMessage e web.ValidationResponse; -PeriodoForm: adição do método isValid(); -RelatoriosMaisVendidos: método gerarRelatorio refatorado como os métodos validarFormulario e getRelatorio; -Exclusão da página relatorios/mais_vendidos/campos.jsp; -Página relatorios/mais_vendidos/inicio.jsp: adição dos campos de formulário; adequação do código JS;

--- a/projetoRevendaVeiculosSpringMVC/TODO.txt
+++ b/projetoRevendaVeiculosSpringMVC/TODO.txt
@@ -4,3 +4,5 @@ Para exercícios:
 -Implementar CDU Autorizar Venda.
 -Implementar CDU Finalizar Venda.
 -Na página "Compras envolvidas" do CDU Registrar Venda, implementar a remoção de registros da tabela (usando Ajax).
+-Em ServiceVenda e ServiceVendaTest: impedir que seja registrada uma venda para um veículo com status diferente de DISPONÍVEL PARA A VENDA.
+-Corrigir bug no CRUD Veículo: ao tentar excluir um veículo que possui uma compra associada, a operação gera um erro (comportamento esperado) mas o veículo selecionado é excluído da tabela presente na página. Esta exclusão não deveria ser realizada.  
